[gd_scene load_steps=14 format=2]

[ext_resource path="res://tux/tux.png" type="Texture" id=1]
[ext_resource path="res://tux/hat.png" type="Texture" id=2]
[ext_resource path="res://tux/tux.gd" type="Script" id=3]
[ext_resource path="res://audio/sounds/powerup.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/sounds/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/sounds/hurt.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.1, 0.297045, 0.588216 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -600 ), Vector2( 0, 20 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "pause"
} ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 60 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Area2D/CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 50.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("hat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 56 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Area2D/CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 310.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hat:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 7.5, -4.5 ), Vector2( 7.5, -4.5 ), Vector2( 7.5, -2.5 ), Vector2( 7.5, -3.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Area2D/CollisionShape2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 78, 30 )

[node name="Tux ()KinematicBody2D" type="KinematicBody2D"]
scale = Vector2( 0.997305, 1 )
collision_mask = 2
script = ExtResource( 3 )

[node name="Tux" type="Sprite" parent="."]
position = Vector2( 0, -151.116 )
scale = Vector2( 6, 6 )
texture = ExtResource( 1 )
hframes = 8
vframes = 9
frame = 30

[node name="hat" type="Sprite" parent="Tux"]
visible = false
position = Vector2( 7.5, -4.5 )
texture = ExtResource( 2 )
hframes = 3
vframes = 2
frame = 4

[node name="HatAnimation" type="AnimationPlayer" parent="Tux/hat"]
autoplay = "hat"
anims/hat = SubResource( 1 )

[node name="TuxAnimations" type="AnimationPlayer" parent="Tux"]
autoplay = "swim"
anims/die = SubResource( 2 )
anims/fall = SubResource( 3 )
anims/hat = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/swim = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0, 1, 0.415686, 1 )
position = Vector2( -6, 12 )
shape = SubResource( 7 )

[node name="HatTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="SoundJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 19.0

[node name="SoundPowerup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0

[node name="SoundHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 20.0

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="timeout" from="HatTimer" to="." method="_on_HatTimer_timeout"]
